Fix layout issues

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -6,19 +6,12 @@ body {
   align-items: stretch;
 }
 
-div {
-  display: flex;
-  flex-grow: 1;
-}
-
 a {
   color: #00B7FF;
 }
 
-.app {
-  border-color: black;
-  border-style: solid;
-  border-width: 1px;
+#app {
+  display: flex;
+  flex-direction: column;
   flex-grow: 1;
-  margin: 5px;
 }
